--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           uses: pixta-dev/repository-mirroring-action@v1
           with:
             target_repo_url: ${{ env.MIRROR_URL }}
-            ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+            ssh_private_key: ${{ secrets.MIRROR_GIT_PRIVATE_KEY }}
 
   build-and-test:
     name: Build and run tests
