--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(Boost_NO_WARN_NEW_VERSIONS 1)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
+set(RTYPE_GAME_ENGINE_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/gameEngine/include CACHE PATH "Path to game engine include directory")
 
 #[===[ DEPENDENCIES ]===]
 find_package(SFML
@@ -32,6 +33,8 @@ if(BUILD_TESTS)
 endif ()
 #[===[ END DEPENDENCIES ]===]
 
+#[===[ GAME ENGINE ]===]
+add_subdirectory(gameEngine)
 
 #[===[ SERVER ]===]
 add_subdirectory(server)
