--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(${EXEC_CLIENT}
 target_include_directories(${EXEC_CLIENT}
         PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/include
+        ${RTYPE_GAME_ENGINE_INCLUDE}
 )
 
 target_compile_options(${EXEC_CLIENT}
@@ -22,6 +23,7 @@ target_compile_options(${EXEC_CLIENT}
 
 target_link_libraries(${EXEC_CLIENT}
         PRIVATE
+        GameEngine
         sfml-system
         sfml-network
         sfml-graphics
