--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -2,7 +2,8 @@ name: Push to Epitech organization r-type repository
 
 on:
   push:
-    branches: [ '**', '!ga-ignore-*' ]
+    branches:
+      - main
   pull_request:
     branches: [ '**', '!ga-ignore-*' ]
 
@@ -22,4 +23,3 @@ jobs:
         with:
           target_repo_url: ${{ env.MIRROR_URL }}
           ssh_private_key: ${{ secrets.MIRROR_GIT_PRIVATE_KEY }}
-          
