--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -6,6 +6,7 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/)
 
 add_executable(${EXEC_CLIENT}
         src/main.cpp
+        src/Network.cpp
 )
 
 target_include_directories(${EXEC_CLIENT}
