--- a/.github/workflows/test_cache.yml
+++ b/.github/workflows/test_cache.yml
@@ -38,8 +38,6 @@ jobs:
         uses: lukka/run-vcpkg@main
         id: runvcpkg
         with:
-          # This one is not needed, as it is the default value anyway.
-          # vcpkgDirectory: '${{ github.workspace }}/vcpkg'
           vcpkgJsonGlob: '**/cmakepresets/vcpkg.json'
 
       - name: List $RUNNER_WORKSPACE before build
@@ -51,7 +49,7 @@ jobs:
         uses: lukka/run-cmake@v10
         id: runcmake
         with:
-          cmakeListsTxtPath: '${{ github.workspace }}/cmakepresets/CMakeLists.txt'
+          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
           configurePreset: 'ninja-multi-vcpkg'
           buildPreset: 'ninja-multi-vcpkg'
           buildPresetAdditionalArgs: '[`--config Release`]'
