--- a/.github/workflows/test_cache.yml
+++ b/.github/workflows/test_cache.yml
@@ -14,12 +14,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         include:
-          - os: windows-latest
-            triplet: x64-windows
           - os: ubuntu-latest
             triplet: x64-linux
-          - os: macos-latest
-            triplet: x64-osx
+#          - os: windows-latest
+#            triplet: x64-windows
+#          - os: macos-latest
+#            triplet: x64-osx
 
     env:
       VCPKG_DEFAULT_TRIPLET: ${{ matrix.triplet }}
@@ -46,12 +46,11 @@ jobs:
       - name: Prints output of run-vcpkg's action.
         run: echo "root='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}', triplet='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_DEFAULT_TRIPLET_OUT }}' "
 
-      - name: Run CMake+vcpkg+NinjaMulti-Config (Release configuration)
-        uses: lukka/run-cmake@v10
-        id: runcmake
-        with:
-          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-          buildPresetAdditionalArgs: '[`--config Release`]'
+      - name: build project
+        shell: bash
+        run: |
+          just cmake
+          cmake -DCMAKE_TOOLCHAIN_FILE:STRING="/home/runner/work/R-Type/R-Type/vcpkg/scripts/buildsystems/vcpkg.cmake" -S . -B ./build
 
       - name: List $RUNNER_WORKSPACE after build
         run: find $RUNNER_WORKSPACE
