[ADD] ci build vcpckg

--- a/.github/workflows/test_cache.yml
+++ b/.github/workflows/test_cache.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           submodules: true
 
+      - name: Install sfml lib dependencies
+        shell: bash
+        run: sudo apt-get install libx11-dev libxrandr-dev libxcursor-dev libxi-dev libudev-dev libgl1-mesa-dev freeglut3-dev
+
       - uses: lukka/get-cmake@latest
 
       - name: Restore from cache and setup vcpkg executable and data files.
