[ADD] job dependencies

--- a/.github/workflows/rtypePipeline.yml
+++ b/.github/workflows/rtypePipeline.yml
@@ -26,6 +26,7 @@ jobs:
 
   build-project:
     runs-on: ${{ matrix.os }}
+    needs: cpp-linter
     strategy:
       fail-fast: false
       matrix:
