--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ find_package(Boost
 )
 find_package(Threads REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
-if(BUILD_TESTS)
+if (BUILD_TESTS)
     find_package(GTest REQUIRED)
 endif ()
 #[===[ END DEPENDENCIES ]===]
@@ -40,7 +40,7 @@ endif ()
 add_subdirectory(gameEngine)
 
 #[===[ SERVER ]===]
-add_subdirectory(server)
+#add_subdirectory(server)
 
 #[===[ CLIENT ]===]
 add_subdirectory(client)
