--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -5,20 +5,16 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/)
 
 
 add_executable(${EXEC_CLIENT}
-        src/Components/Background.cpp
-        src/Components/Button.cpp
-        src/Components/InputText.cpp
-        src/Scenes/Game.cpp
-        src/Scenes/Lobby.cpp
-        src/Scenes/Manager.cpp
-        src/Scenes/Welcome.cpp
         src/main.cpp
-        src/Network.cpp
+        src/Client.cpp
+        src/network/Network.cpp
+        src/graphics/GUI.cpp
 )
 
 target_include_directories(${EXEC_CLIENT}
         PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/include
+        ${Boost_INCLUDE_DIRS}
         ${RTYPE_GAME_ENGINE_INCLUDE}
 )
 
