[FIX] merge with main Client Game Engine

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -5,18 +5,20 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/)
 
 
 add_executable(${EXEC_CLIENT}
-        src/Components/Background.cpp
-        src/Components/Button.cpp
-        src/Components/InputText.cpp
-        src/Scenes/Game.cpp
-        src/Scenes/Lobby.cpp
-        src/Scenes/Manager.cpp
-        src/Scenes/Welcome.cpp
+        #        src/Components/Background.cpp
+        #        src/Components/Button.cpp
+        #        src/Components/InputText.cpp
+        #        src/Scenes/Game.cpp
+        #        src/Scenes/Lobby.cpp
+        #        src/Scenes/Manager.cpp
+        #        src/Scenes/Welcome.cpp
         src/main.cpp
+        src/Client.cpp
+        src/scene/SceneManager.cpp
+        src/scene/GameScene.cpp
         src/Controller.cpp
         src/network/Network.cpp
-        src/Game.cpp
-        include/Game.hpp
+        src/graphics/GUI.cpp
 )
 
 target_include_directories(${EXEC_CLIENT}
@@ -39,4 +41,5 @@ target_link_libraries(${EXEC_CLIENT}
         sfml-network
         sfml-graphics
         sfml-window
+        spdlog::spdlog
 )
