[FIX] change systems for ECS call with  to dynamic_cast on ptr

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -16,7 +16,7 @@ add_executable(${EXEC_CLIENT}
         src/Client.cpp
         src/scene/SceneManager.cpp
         src/scene/GameScene.cpp
-        src/Controller.cpp
+        src/scene/EcsGameController.cpp
         src/network/Network.cpp
         src/graphics/GUI.cpp
 )
