[ADD] spdblog to lib

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -35,11 +35,12 @@ target_compile_options(${EXEC_SERVER}
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     add_compile_options(-fno-gnu-unique)
-endif()
+endif ()
 
 target_link_libraries(${EXEC_SERVER}
         PRIVATE
         GameEngine
         Boost::boost
         Boost::system
+        spdlog::spdlog
 )
