--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -33,5 +33,7 @@ target_link_libraries(${EXEC_CLIENT}
         sfml-network
         sfml-graphics
         sfml-window
+        Boost::serialization
+        Boost::system
         spdlog::spdlog
 )
