--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -44,5 +44,6 @@ target_link_libraries(${EXEC_SERVER}
         GameEngine
         Boost::boost
         Boost::system
+        Boost::serialization
         spdlog::spdlog
 )
