--- a/.github/workflows/rtypePipeline.yml
+++ b/.github/workflows/rtypePipeline.yml
@@ -72,8 +72,8 @@ jobs:
       - name: Run tests
         run: |
           ls -la
-          ls -la build
-          cd build/server && ctest
+          ls -la builds
+          cd builds/server && ctest
 
   push_to_mirror:
     runs-on: ubuntu-latest
