[FIX] Test pipeline

--- a/.github/workflows/rtypePipeline.yml
+++ b/.github/workflows/rtypePipeline.yml
@@ -72,9 +72,9 @@ jobs:
       - name: Run tests
         run: |
           ls -la
-          ls -la Release
-          cd Release && ctest
-          cd Release/server && ctest
+          ls -la builds
+          ls -la builds/ninja-multi-vcpkg
+          cd builds/ninja-multi-vcpkg/server && ctest
 
   push_to_mirror:
     runs-on: ubuntu-latest
