--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -4,34 +4,39 @@ on:
   workflow_dispatch:
     inputs:
       tag:
-        description: "tag name"
+        description: "Tag name"
+        required: true
 
 jobs:
-  release:
+  build:
+    uses: ./.github/workflows/rTypePipeline.yml
+
+  create-release:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Create Draft Release
+      - uses: actions/checkout@v2
+
+      - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.event.inputs.tag }}"
-          release_name: "whanos"
-          draft: true
+          tag_name: ${{ github.event.inputs.tag }}
+          release_name: Release ${{ github.event.inputs.tag }}
+          draft: false
           prerelease: false
 
-      - uses: actions/upload-release-asset@v1.0.1
+      - name: Archive Artifacts
+        run: zip -r release.zip assets/ r-type_server r-type_client
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./my-artifact.zip
-          asset_name: my-artifact.zip
+          asset_path: ./release.zip
+          asset_name: release.zip
           asset_content_type: application/zip
-
-      - uses: eregon/publish-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          release_id: ${{ steps.create_release.outputs.id }}
