--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -24,13 +24,8 @@ jobs:
         run: echo "Some files failed the linting checks!"
 
   build-project:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs: cpp-linter
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest, macos-latest ]
-
     steps:
       - uses: actions/checkout@v3
         with:
@@ -41,18 +36,6 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         shell: bash
         run: sudo apt-get install libx11-dev libxrandr-dev libxcursor-dev libxi-dev libudev-dev libgl1-mesa-dev freeglut3-dev
-
-      #      for MacOs
-      - name: Install sfml lib dependencies
-        if: matrix.os == 'macos-latest'
-        run: |
-          brew install sfml
-
-      #     for Windows
-      - name: Install sfml lib dependencies
-        if: matrix.os == 'windows-latest'
-        run: |
-          choco install glfw3
 
       - uses: lukka/get-cmake@latest
 
@@ -70,16 +53,22 @@ jobs:
 
       - name: Run tests
         run: |
+          ls
+          tree builds/ninja-multi-vcpkg/
           cd builds/ninja-multi-vcpkg/server && ctest
 
+      - name: Archive Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: release
+          path: |
+            r-type_server
+            r-type_client
+            assets
+  
   create-release:
     needs: build-project
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest, macos-latest ]
-
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -94,8 +83,16 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Archive Artifacts
-        run: zip -r release.zip assets/ r-type_server r-type_client
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: release
+
+      - name: Zip Artifacts
+        run: |
+          ls
+          zip -r release.zip server/r-type_server client/r-type_client assets
+
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
