--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -24,8 +24,13 @@ jobs:
         run: echo "Some files failed the linting checks!"
 
   build-project:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     needs: cpp-linter
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest ]
+
     steps:
       - uses: actions/checkout@v3
         with:
@@ -53,8 +58,6 @@ jobs:
 
       - name: Run tests
         run: |
-          ls
-          tree builds/ninja-multi-vcpkg/
           cd builds/ninja-multi-vcpkg/server && ctest
 
       - name: Archive Artifacts
