--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -58,6 +58,8 @@ jobs:
 
       - name: Run tests
         run: |
+          ls
+          ls builds/ninja-multi-vcpkg/
           cd builds/ninja-multi-vcpkg/server && ctest
 
       - name: Archive Artifacts
