[ADD] Release pipeline

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -62,15 +62,19 @@ jobs:
           ls builds/ninja-multi-vcpkg/
           cd builds/ninja-multi-vcpkg/server && ctest
 
+      - name: Find and List Binaries
+        run: |
+          find . -type f \( -name 'r-type_server' -o -name 'r-type_client' \) > binaries_list.txt
+          cat binaries_list.txt
+
       - name: Archive Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: release
           path: |
-            r-type_server
-            r-type_client
+            $(cat binaries_list.txt)
             assets
-  
+
   create-release:
     needs: build-project
     runs-on: ubuntu-latest
