--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -67,8 +67,7 @@ jobs:
         with:
           name: release
           path: |
-            ./Release/r-type_server
-            ./Release/r-type_client
+            Release
             assets
 
   create-release:
@@ -96,7 +95,9 @@ jobs:
       - name: Zip Artifacts
         run: |
           ls
-          zip -r release.zip server/r-type_server client/r-type_client assets
+          mv Release/r-type_server r-type_server
+          mv Release/r-type_client r-type_client
+          zip -r release.zip r-type_server r-type_client assets
 
 
       - name: Upload Release Asset
