--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(${EXEC_SERVER}
         src/commands/ConnectToServer.cpp
         src/commands/Input.cpp
         src/commands/JoinRoom.cpp
+        src/commands/JoinRoomAuto.cpp
         src/commands/JoinGame.cpp
         src/commands/UpdateName.cpp
         src/game/rtype/RtypeScene.cpp
