[ADD] KickPlayer command (server)

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable(${EXEC_SERVER}
         src/commands/JoinRoom.cpp
         src/commands/JoinRoomAuto.cpp
         src/commands/JoinGame.cpp
+        src/commands/KickPlayer.cpp
         src/commands/UpdateName.cpp
         src/game/rtype/RtypeScene.cpp
         src/game/rtype/RtypeGame.cpp
