--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -41,6 +41,7 @@ endif ()
 
 add_executable(${EXEC_SERVER}
         src/commands/ConnectToServer.cpp
+        src/commands/GodMode.cpp
         src/commands/Input.cpp
         src/commands/JoinRoom.cpp
         src/commands/JoinRoomAuto.cpp
