--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -47,6 +47,7 @@ add_executable(${EXEC_SERVER}
         src/commands/JoinRoomAuto.cpp
         src/commands/JoinGame.cpp
         src/commands/KickPlayer.cpp
+        src/commands/Spectate.cpp
         src/commands/UpdateName.cpp
         src/game/rtype/RtypeScene.cpp
         src/game/rtype/RtypeGame.cpp
