--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(${EXEC_CLIENT}
         src/network/commands/JoinRoomAuto.cpp
         src/network/commands/JoinGame.cpp
         src/network/commands/KickPlayer.cpp
+        src/network/commands/Spectate.cpp
         src/network/commands/Tracker.cpp
         src/network/commands/UpdateName.cpp
         src/network/tools/Logs.cpp
