[REFACTO] game engine

--- a/gameEngine/CMakeLists.txt
+++ b/gameEngine/CMakeLists.txt
@@ -3,22 +3,17 @@
 set(LIBRARY "GameEngine")
 
 add_library(${LIBRARY} STATIC
-        src/ecs/entity/EntityManager.cpp
-        src/ecs/RegistryBuilder.cpp
-        src/gfx/sfml/SfmlEvent.cpp
-        src/gfx/sfml/SfmlTexture.cpp
-        src/gfx/sfml/SfmlDisplay.cpp
-        src/gfx/sfml/SfmlGfx.cpp
-        src/scene/SimpleScene.cpp
-        src/scene/SimpleScene.cpp
-        src/UI/Window.cpp
         src/asset/AssetManager.cpp
         src/asset/ConfigLoader.cpp
+        src/core/Core.cpp
+        src/ecs/entity/EntityManager.cpp
+        src/ecs/RegistryBuilder.cpp
         src/entity/EntityFactory.cpp
         src/entity/EntityBuilder.cpp
-        include/gameEngine/scene/SceneManager.hpp
-        include/gameEngine/scene/SceneContainer.hpp
-        include/gameEngine/scene/IScene.hpp
+        src/scene/SceneContainer.cpp
+        src/scene/SceneManager.cpp
+        src/scene/SimpleScene.cpp
+        src/UI/Window.cpp
 )
 
 target_include_directories(${LIBRARY}
