--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -25,6 +25,7 @@ target_include_directories(${EXEC_CLIENT}
         PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/include
         ${RTYPE_GAME_ENGINE_INCLUDE}
+        ${RTYPE_GAME_INCLUDE}
 )
 
 target_compile_options(${EXEC_CLIENT}
