--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -49,7 +49,9 @@ add_executable(${EXEC_SERVER}
         src/commands/KickPlayer.cpp
         src/commands/Spectate.cpp
         src/commands/UpdateName.cpp
-        src/game/Game.cpp
+        src/game/rtype/RtypeScene.cpp
+        src/game/rtype/RtypeGame.cpp
+        src/tools/EndianConverter.cpp
         src/tools/Logs.cpp
         src/Client.cpp
         src/Room.cpp
