[ADD] EndianConverter client: convert from native to little on send and from little to native on receive

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(${EXEC_CLIENT}
         src/network/commands/Spectate.cpp
         src/network/commands/Tracker.cpp
         src/network/commands/UpdateName.cpp
+        src/network/tools/EndianConverter.cpp
         src/network/tools/Logs.cpp
         src/network/Network.cpp
 )
